--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
       Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
-      <li>Часовых поясов <span class="intro__list_unbold">11</span></li>
-      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_unbold">12</span></li>
-      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_unbold">16</span></li>
-      <li>Природных заповедников <span class="intro__list_unbold">105</span></li>
-      <li>Аэропортов <span class="intro__list_unbold">241</span></li>
+      <li>Часовых поясов <span class="intro__numbers">11</span></li>
+      <li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+      <li>Природных заповедников <span class="intro__numbers">105</span></li>
+      <li>Аэропортов <span class="intro__numbers">241</span></li>
     </ul>
   </section>
   <section class="photo-grid">
@@ -53,7 +53,7 @@
     <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="фото-коллажа">
   </section>
   <section class="places">
-    <div class="places__place">
+    <div class="place">
       <div class="place__heading">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="places__place">
+    <div class="place">
       <div class="place__heading">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-    <div class="places__place">
+    <div class="place">
       <div class="place__heading">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
@@ -114,7 +114,7 @@
         </div>
       </div>
     </div>
-    <div class="places__place">
+    <div class="place">
       <div class="place__heading">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
@@ -133,7 +133,7 @@
         </div>
       </div>
     </div>
-    <div class="places__place">
+    <div class="place">
       <div class="place__heading">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
