--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="лого-заголовок">
     <ul class="lang-list">
-      <li class="lang-list__lang-link lang-list__lang-link_underline"><a lang="en">Ru</a></li>
-      <li class="lang-list__lang-link"><a lang="en">En</a></li>
+      <li class="lang-list__lang-link lang-list__lang-link_underline"><a class="lang-list__lang-link-text" href="#" lang="en">Ru</a></li>
+      <li class="lang-list__lang-link"><a class="lang-list__lang-link-text" href="#" lang="en">En</a></li>
     </ul>
   </header>
   <section class="lead">
@@ -160,6 +160,7 @@
     </a>
   </section>
   <footer class="footer">
+    <nav>
     <ul class="footer__list-link">
       <li class="footer__link"><a class="footer__link-text" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
       <li class="footer__link"><a class="footer__link-text" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
@@ -167,6 +168,7 @@
       <li class="footer__link"><a class="footer__link-text" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
       <li class="footer__link"><a class="footer__link-text" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
     </ul>
+    </nav>
     <p class="footer__author">&#169; 2021. Черняев Александр</p>
   </footer>
 </body>
