--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="place__content">
-        <img class="place__image" src="./images/place-kosa.jpg" alt="Карелия">
+        <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
         <div class="place__text">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера.
